aws-eks/k8s-yml-templates/prometheus-grafana/prometheus-grafana-ingress.yml
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: prometheus
#  namespace: monitoring
#spec:
#    tls:
#      - hosts:
#        - prometheus.metricon.com.au
#        secretName: ingress-secret-tls 
#    rules:
#    - host: prometheus.metricon.com.au
#      http:
#        paths:
#        - backend:
#            serviceName: prometheus-operated #linkerd-prometheus 
#            servicePort: 9090
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: thanos-web
#  namespace: monitoring
# annotations:
#spec:
#    tls:
#      - hosts:
#        - thanos.metricon.com.au
#        secretName: ingress-secret-tls 
#    rules:
#    - host: thanos.metricon.com.au
#      http:
#        paths:
#        - backend:
#            serviceName: thanos-web
#            servicePort: 10902
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring 
spec:
    tls:
      - hosts:
        - metgraf.metricon.com.au
        secretName: ingress-secret-tls 
    rules:
    - host: metgraf.metricon.com.au
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 80
---
        

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: alertmanager
#  namespace: monitoring
#spec:
#    tls:
#      - hosts:
#        - alertmanager.metricon.com.au
#        secretName: ingress-secret-tls 
#    rules:
#    - host: alertmanager.metricon.com.au
#      http:
#        paths:
#        - backend:
#            serviceName: prometheus-kube-prometheus-alertmanager
#            servicePort: 9093
#---
